gitops/apps/vaultwarden/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
