gitops/apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: apps
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Security
    gethomepage.dev/name: Vaultwarden
    gethomepage.dev/icon: bitwarden.png
    gethomepage.dev/description: Password manager
    gethomepage.dev/href: "http://vaultwarden.home.arpa"
spec:
  ingressClassName: traefik
  rules:
    - host: vaultwarden.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
